# vxbank

./: README.md
mx-simulator/: simulator-notes.md
vx-events-contract/: .gitignore
vxbank-api/: .gitignore  Makefile  build.gradle  notes.md  readme.md  settings.gradle
vxbank-datastore/: settings.gradle
vxbank-web-app-v1/: .gcloudignore  app.yaml  (+1 more)
vxevents-contract/: Cargo.toml  Makefile  mxpy.data-storage-devnet.json  notes.md
vxevents-contract/interaction/: contract-snipets.sh  devnet-snipets.sh
vxevents-contract/interaction/logs/: empty-file.txt
vxevents-contract/meta/src/: main.rs
vxevents-contract/scenarios/: t_001_set_settings.scen.json  t_002_register_payment.scen.json  t_003_set_egld_percentage.scen.json  t_004_register_payment_with_egld.scen.json  t_004_set_egld_percentage.scen.json  t_004_set_token_percentage.scen.json  t_005_get_token_percentage.scen.json  t_006_create_event.scen.idCheck.json  t_006_create_event.scen.json  t_006_create_event.scen.json.json
vxevents-contract/scratch/: working-on-first-test.md
vxevents-contract/src/: admin_tools.rs  vx_events.rs  vx_events_admin_endpoints.rs  vx_events_data.rs  vx_events_endpoints.rs  vx_events_store.rs
vxevents-contract/tests/: vx_events_scenario_go_test.rs  vx_events_scenario_rs_test.rs
vxevents-contract/utils/: .gitignore  001-issue-usdt.py  002-deploy-contract.py  004-set-usdt-percentage.py  MakefileSimulator  issue-usdt.py  my_chain_assertions.py  waitSimulatorToStart.sh
vxevents-contract/utils/simwalets/: aliceKey.md  aliceKeyStore.json  aliceWallet.pem  bobKey.md  bobKeyStore.json
(+430 files in other folders)
