[package]
name = "vx-events"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/vx_events.rs"

[dependencies.multiversx-sc]
version = "0.50.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.0"

[workspace]
members = [
    ".",
    "meta",
]
